--- a/yyq456/yyq456.csproj
+++ b/yyq456/yyq456.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Class2.cs" />
     <Compile Include="Class3.cs" />
     <Compile Include="Class5.cs" />
+    <Compile Include="Class6.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
